After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 787576 - Numbers cannot be entered in search box
Numbers cannot be entered in search box
Status: RESOLVED FIXED
Product: evolution
Classification: Applications
Component: Mailer
3.26.x (obsolete)
Other Linux
: Normal normal
: ---
Assigned To: evolution-mail-maintainers
Evolution QA team
: 789273 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2017-09-12 07:17 UTC by Paul Menzel
Modified: 2017-10-24 13:49 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Paul Menzel 2017-09-12 07:17:50 UTC
Trying to enter a number in the search dialog, the key press is used to tag the current selected message, and not shown in the search box.
Comment 1 André Klapper 2017-09-12 10:52:20 UTC
Not in 3.24.5 on Fedora 26. What is "tag" and how does that show?
Which Evolution version? Which distro? 
This is missing way too much info for a bug report...
Comment 2 Paul Menzel 2017-09-12 19:08:50 UTC
(In reply to André Klapper from comment #1)
> Not in 3.24.5 on Fedora 26. What is "tag" and how does that show?

Tag is a label(?) (Beschriftung) and it shows with coloring the message in the list, and with right-click on a message you can change it too with the third item from the bottom (Beschriftung →).

> Which Evolution version?

As in the bug report meta data: 3.26.

> Which distro?

Debian Sid/unstable
Comment 3 Milan Crha 2017-10-06 09:40:25 UTC
Thanks for a bug report. Pity I missed it. I fixed it with a reference to a downstream bug report [1].

The fix is to allow labels only if the message list is focused, when also the context menu contains the Labels.

Created commit 0b6a4a7072 in evo master (3.27.1+)
Created commit 96f935b647 in evo gnome-3-26 (3.26.2+)

[1] https://bugzilla.redhat.com/show_bug.cgi?id=1498484
Comment 4 Milan Crha 2017-10-24 13:49:25 UTC
*** Bug 789273 has been marked as a duplicate of this bug. ***