EMailBrowser: Cannot type some letters in the search entry

When searching the message body, using Ctrl+Shift+F, letters and numbers
used as a single-letter shortcut could not be used, having the key press
being used like the shortcut.

This also removes (now) unneeded code from:
https://bugzilla.gnome.org/show_bug.cgi?id=787576