src/mail/e-mail-browser.c
@@ -464,14 +464,21 @@ mail_browser_key_press_event_cb (GtkWindow *mail_browser,
 
 	mail_display = e_mail_reader_get_mail_display (E_MAIL_READER (mail_browser));
 
-	if (!event || (event->state & (GDK_CONTROL_MASK | GDK_SHIFT_MASK | GDK_MOD1_MASK)) != 0)
+	if (!event || (event->state & (GDK_CONTROL_MASK | GDK_SHIFT_MASK | GDK_MOD1_MASK)) != 0 ||
+	    event->keyval == GDK_KEY_Tab ||
+	    event->keyval == GDK_KEY_Return ||
+	    event->keyval == GDK_KEY_Escape ||
+	    event->keyval == GDK_KEY_KP_Tab ||
+	    event->keyval == GDK_KEY_KP_Enter)
 		return event && e_mail_display_need_key_event (mail_display, event);
 
 	focused = gtk_window_get_focus (mail_browser);
 
 	if (focused && (GTK_IS_ENTRY (focused) || GTK_IS_EDITABLE (focused) ||
-	    (GTK_IS_TREE_VIEW (focused) && gtk_tree_view_get_search_column (GTK_TREE_VIEW (focused)) >= 0)))
-		return FALSE;
+	    (GTK_IS_TREE_VIEW (focused) && gtk_tree_view_get_search_column (GTK_TREE_VIEW (focused)) >= 0))) {
+		gtk_widget_event (focused, (GdkEvent *) event);
+		return TRUE;
+	}
 
 	if (e_web_view_get_need_input (E_WEB_VIEW (mail_display)) &&
 	    gtk_widget_has_focus (GTK_WIDGET (mail_display))) {
