src/modules/mail/e-mail-shell-view-private.h
@@ -165,10 +165,6 @@ void		e_mail_shell_view_update_send_receive_menus
 					(EMailShellView *mail_shell_view);
 GDBusProxy *	e_mail_shell_view_get_web_extension_proxy
 					(EMailShellView *mail_shell_view);
-void		e_mail_shell_view_update_labels_sensitivity
-					(EShellWindow *shell_window,
-					 GtkWidget *focused_widget,
-					 EMailShellView *mail_shell_view);
 
 G_END_DECLS
 
