src/modules/mail/e-mail-shell-view.c
@@ -1570,8 +1570,6 @@ mail_shell_view_update_actions (EShellView *shell_view)
 	/* folder_is_store + folder_is_virtual == "Search Folders" */
 	action = ACTION (MAIL_VFOLDER_UNMATCHED_ENABLE);
 	gtk_action_set_visible (action, folder_is_store && folder_is_virtual);
-
-	e_mail_shell_view_update_labels_sensitivity (shell_window, NULL, mail_shell_view);
 }
 
 static void
